--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "isolated",
   "version": "0.1.1",
-  "description": "isolated provider one-time folders for unit tests.",
+  "description": "isolated provides one-time folders for unit tests.",
   "contributors": [
     {
       "name": "Golo Roden",
