--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   ],
   "main": "lib/isolated.js",
   "dependencies": {
-    "async": "0.9.0",
-    "fs-extra": "0.13.0",
-    "temp": "0.8.1",
-    "underscore": "1.7.0"
+    "async": "1.3.0",
+    "fs-extra": "0.21.0",
+    "lodash": "3.10.0",
+    "temp": "0.8.3"
   },
   "devDependencies": {
+    "assertthat": "0.6.0",
     "grunt": "0.4.5",
-    "node-assertthat": "0.2.3",
-    "tourism": "0.10.1"
+    "tourism": "0.20.1"
   },
   "repository": {
     "type": "git",
