--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     {
       "name": "Golo Roden",
       "email": "golo.roden@thenativeweb.io"
+    },
+    {
+      "name": "Jan-Hendrik Grundhöfer",
+      "email": "jan-hendrik.grundhoefer@thenativeweb.io"
+    },
+    {
+      "name": "Matthias Wagler",
+      "email": "matthias.wagler@thenativeweb.io"
     }
   ],
   "main": "dist/isolated.js",
   "dependencies": {
-    "async": "1.4.0",
-    "fs-extra": "0.22.1",
-    "lodash": "3.10.0",
+    "fs-extra": "7.0.0",
     "temp": "0.8.3"
   },
   "devDependencies": {
