--- a/package.json
+++ b/package.json
@@ -16,16 +16,15 @@
       "email": "matthias.wagler@thenativeweb.io"
     }
   ],
-  "main": "dist/isolated.js",
+  "main": "lib/isolated.js",
   "dependencies": {
-    "@babel/runtime": "7.1.2",
-    "fs-extra": "7.0.0",
+    "fs-extra": "7.0.1",
     "recursive-readdir": "2.2.2",
-    "temp": "0.8.3"
+    "temp": "0.9.0"
   },
   "devDependencies": {
-    "assertthat": "1.0.0",
-    "roboter": "2.0.0"
+    "assertthat": "2.0.3",
+    "roboter": "4.0.4"
   },
   "repository": {
     "type": "git",
